@@ -109,10 +109,10 @@ granulepos_test_encode (int frequency, int auto_p)
     last_granule = op.granulepos;
     keyframe = op.granulepos >> shift;
     keydist = op.granulepos - (keyframe << shift);
-    if ((keyframe + keydist) != frame)
-      FAIL ("encoder granulepos does not map to the correct frame index");
+    if ((keyframe + keydist) != frame + 1)
+      FAIL ("encoder granulepos does not map to the correct frame number");
     tframe = theora_granule_frame (&th, op.granulepos);
-    if (tframe != frame)
+    if (tframe != frame + 1)
       FAIL ("theora_granule_frame returned incorrect results");
 #if DEBUG
     printf("++ frame %d granulepos %lld %d:%d %d %.3lfs\n", 
